--- a/Match3LoveSim.spritebuilder/Match3LoveSim.xcodeproj/xcshareddata/xcschemes/Match3LoveSim.xcscheme
+++ b/Match3LoveSim.spritebuilder/Match3LoveSim.xcodeproj/xcshareddata/xcschemes/Match3LoveSim.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B77F1B2D17B978D7009739AE"
-               BuildableName = "Match3Shooter.app"
+               BuildableName = "Match3LoveSim.app"
                BlueprintName = "Match3LoveSim iOS"
                ReferencedContainer = "container:Match3LoveSim.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B77F1B2D17B978D7009739AE"
-            BuildableName = "Match3Shooter.app"
+            BuildableName = "Match3LoveSim.app"
             BlueprintName = "Match3LoveSim iOS"
             ReferencedContainer = "container:Match3LoveSim.xcodeproj">
          </BuildableReference>
@@ -52,7 +52,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B77F1B2D17B978D7009739AE"
-            BuildableName = "Match3Shooter.app"
+            BuildableName = "Match3LoveSim.app"
             BlueprintName = "Match3LoveSim iOS"
             ReferencedContainer = "container:Match3LoveSim.xcodeproj">
          </BuildableReference>
@@ -70,7 +70,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B77F1B2D17B978D7009739AE"
-            BuildableName = "Match3Shooter.app"
+            BuildableName = "Match3LoveSim.app"
             BlueprintName = "Match3LoveSim iOS"
             ReferencedContainer = "container:Match3LoveSim.xcodeproj">
          </BuildableReference>
